<resources>
    <string name="app_name">TicTac</string>
    <string name="title_menu">TIC-TAC</string>
    <string name="title_newDelivery">Nouvelle demande de livraison</string>
    <string name="menu_newDelivery">Nouvelle demande</string>
    <string name="title_myDeliveries">Mes livraisons</string>
    <string name="title_myDeliveriesHistory">Historique de livraisons</string>
    <string name="title_myInfo">Mes informations</string>

    <string name="myDeliveries">Mes livraisons</string>
    <string name="new_delivery">Nouvelle livraison</string>
    <string name="userInfo">Mes informations</string>
    <string name="lblComments">Commentaires:</string>
    <string name="exit">Quitter</string>
    <string name="lblPackageType">Type de colis</string>

    <!--general-->
    <string name="lblStartDeliveryRequest">Demander une livraison</string>
    <string name="lblCancelDeliveryRequest">Annuler la demande</string>
    <string name="lblCancel">Annuler</string>
    <string name="lblPrevious">Précédent</string>

    <string name="lblSenderName">Nom et prénom du demandeur de la course:</string>
    <string name="lblSenderNumber">Numéro du demandeur de la course:</string>
    <string name="lblSenderAddress">Détails du lieu de récupération:</string>
    <string name="lblReceiverAddress">Détails du lieu de livraison:</string>
    <string name="lblReceiverNumber">Numéro du receveur:</string>

    <string name="lblSenderReferences">Références de l\'envoyeur:</string>
    <string name="lblSendDate"><![CDATA[Date & Heure]]> d\'envoie:</string>
    <string name="lblReceiver">Nom et prénom du receveur:</string>
    <string name="view_lblReceiver">Receveur:</string>
    <string name="view_lblStatus">Statut:</string>

    <!--<string name="lblReceiverAddress">Addresse de livraison:</string>-->
    <string name="lblSender">Envoyeur:</string>
    <string name="lblReceiverReferences">Références du receveur:</string>

    <string name="requestSuccessfullyCreate">Votre demande de livraison a été bien crée</string>
    <string name="requestSuccessfullyCancel">Votre demande de livraison a été bien annulée</string>
    <string name="noRequestedDeliveries">Vous n\'avez pas de demandes de livraison</string>
    <string name="fieldCannotBeEmpty">Ne peut pas être vide</string>

    <string name="lblBadConnexionInfo">Vérifier les informations de connexion</string>
    <string name="lblEndDelivery">Terminer la course</string>
    <string name="lblReceiveDate">Date de réception:</string>
    <string name="lblDeliverName">Livreur:</string>
    <string name="lblCity">Ville:</string>
    <string name="lblBack">Retour</string>

    <string name="readPhonePermissionDeniedErrorMessage">Désolé nous avons besoin de la permission d\'identifier votre appareil pour le bon fonctionnement de l\'application</string>
    <string name="callPermissionDeniedErrorMessage">Désolé nous avons besoin de cette permission pour vous permettre de passer l\'appel</string>
    <string name="needGooglePlayServices">SVP télécharger Google Play Services pour une meilleur expérience d\'utilisation</string>

    <string name="notNetworkErrorMessage">Pas de connexion à internet</string>
    <string name="serverError">"Désolé mais le système a rencontre un problème. Veuillez réesayer plus tard"</string>
    <string name="unableToCreateNewRequest">"Problème survenue lors de la création de la demande"</string>

    <string name="view_lblRequestNumber">Numéro de la demande</string>

    <!--status-->
    <string name="waiting_for_approve">En attente d\'approbation</string>
    <string name="assign_to_deliver">Livreur en route</string>
    <string name="started">En cours</string>
    <string name="ended">Terminée</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="appVersion">Version:</string>
    <string name="msgCancelDeliveryRequest">Voulez vous vraiment annuler la demande?</string>
    <string name="lblYes">Oui</string>
    <string name="lblNo">Non</string>
    <string name="title_activity_delivery">TicTac</string>
    <string name="title_activity_maps">Map</string>
    <string name="lieu_de_depart">Lieu de depart</string>
    <string name="selectionner_sur_la_map">Sélectionner sur la Map</string>
    <string name="lieu_d_arrive">Lieu d\'arrivé</string>
    <string name="lbl_continuer">CONTINUER</string>
    <string name="la_distance_est_de">La distance est de:</string>
    <string name="determinons_la_distance_de_votre_course">Déterminons la distance de votre course</string>
    <string name="title_activity_sender">Informations de l\'envoyeur</string>
    <string name="title_activity_receiver_info">Informations du receveur</string>
    <string name="veuiller_entrer_les_informations_de_l_envoyeur">Veuiller entrer les informations de l\'envoyeur</string>
    <string name="veuiller_entrer_les_informations_du_receveur">Veuiller entrer les informations du receveur</string>
    <string name="title_activity_payment">Mode de paiement</string>
    <string name="lbl_next">Suivant</string>
    <string name="lbl_package_type">Dites nous ce que vous voulez envoyer aujourd\'hui</string>
    <string name="lbl_total_price">Le prix de votre course sera de </string>
    <string name="lbl_special_price">Veuillez nous contacter pour plus d\'informations</string>
    <string name="btn_calculate_total_price">Calculer le prix de la course</string>
    <string name="mobicash">Mobicash</string>
    <string name="orange_money">Orange Money</string>
    <string name="cash">Espèces</string>
    <string name="quel_est_votre_mode_de_paiement">Quel est votre mode de paiement</string>
    <string name="no_delivery">Vous n\'avez pas de demandes</string>
    <string name="description">description</string>
    <string name="lbl_number">Numéro</string>
</resources>
