<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:background="@drawable/rounded_white_rectangle"
    android:orientation="horizontal"
    android:padding="5dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="85dp"
        android:layout_height="72dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/description"
        android:src="@drawable/ic_delivery"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.50"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblReceiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/view_lblReceiver"
            android:textColor="@android:color/black">
        </TextView>

        <TextView
            android:id="@+id/lblStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-smallcaps"

            android:text="@string/view_lblStatus"
            android:textColor="@android:color/black"/>
    </LinearLayout>
</LinearLayout>