<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_delivery_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.DeliveryDetailsActivity">

    <!-- Date and hour -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblRequestNumber"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/view_lblRequestNumber"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/txtRequestNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="number"/>

            <TextView
                android:id="@+id/lblStatus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/view_lblStatus"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"/>

            <!--<ImageView-->
            <!--android:layout_width="40dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:srcCompat="@drawable/ic_upload"-->
            <!--android:id="@+id/imgStatus"-->
            <!--android:layout_marginLeft="40dp"-->
            <!--android:layout_marginStart="40dp"-->
            <!--/>-->
            <EditText
                android:id="@+id/txtStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="text"
                android:textColor="@color/colorRed"/>

            <!--</LinearLayout>-->

            <TextView
                android:id="@+id/lblRequestDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:clickable="false"
                android:focusable="false"
                android:inputType="none"
                android:text="@string/lblSendDate"
                android:textIsSelectable="false"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/txtRequestDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="date"/>

            <TextView
                android:id="@+id/lblReceiveDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:clickable="false"
                android:focusable="false"
                android:inputType="none"
                android:text="@string/lblReceiveDate"
                android:textIsSelectable="false"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/txtReceiveDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="date"/>

            <TextView
                android:id="@+id/lblSenderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblSenderName"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/txtSenderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="date"/>

            <TextView
                android:id="@+id/lblReceiver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/lblReceiver"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/txtReceiverName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:inputType="textAutoComplete"
                android:textIsSelectable="false"/>

            <TextView
                android:id="@+id/lblReceiverAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/lblReceiverAddress"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/txtReceiverAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:inputType="textAutoComplete"
                android:textIsSelectable="false"/>

            <TextView
                android:id="@+id/lblDeliverName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/lblDeliverName"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/txtDeliverName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:inputType="textAutoComplete"
                android:textIsSelectable="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="30dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-smallcaps"
                    android:onClick="goBack"
                    android:text="@string/lblBack"
                    android:textColor="@color/colorWhite"
                    android:theme="@style/CancelButton"/>

                <Button
                    android:id="@+id/btnCancelRequest"
                    android:layout_width="30dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-smallcaps"
                    android:onClick="cancelRequest"
                    android:text="@string/lblCancelDeliveryRequest"
                    android:theme="@style/SubmitButton"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <include
        layout="@layout/progress_bar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
</RelativeLayout>
