<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activities.MenuActivity">


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:layout_width="167dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnNewDelivery"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/colorWhite"
                    android:onClick="onDeliveryRequest"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/img_new_delivery"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/menu_newDelivery"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnMyDeliveries"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/colorWhite"
                    android:onClick="onMyRequestedDeliveries"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/img_deliveries"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/title_myDeliveries"
                    android:textAlignment="center"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="86dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_weight="0.78"
            android:orientation="horizontal"
            android:scaleType="fitCenter"
            android:weightSum="1">

            <ImageView
                android:id="@+id/btnCall"
                android:layout_width="72dp"
                android:layout_height="60dp"
                android:onClick="call"
                app:srcCompat="@drawable/ic_phone"/>

            <ImageView
                android:id="@+id/btnFacebook"
                android:layout_width="72dp"
                android:layout_height="60dp"
                android:onClick="facebook"
                app:srcCompat="@drawable/ic_facebook"/>

            <ImageView
                android:id="@+id/ic_playstore"
                android:layout_width="72dp"
                android:layout_height="60dp"
                android:onClick="playstore"
                app:srcCompat="@drawable/ic_playstore"/>

            <ImageView
                android:id="@+id/ic_share"
                android:layout_width="72dp"
                android:layout_height="60dp"
                android:onClick="share"
                app:srcCompat="@drawable/ic_share"/>

        </LinearLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorPrimary"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="onExitApp"
            android:text="@string/exit"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/lblAppVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/appVersion"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="12sp"
            android:layout_alignParentTop="true"/>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>